@@ -16,7 +16,9 @@
   * User written layout class. 
   * New options for ask_open_file
     https://github.com/shoes/shoes3/issues/444
-  
+  * limited support for touch screens (Linux, Windows)
+    https://github.com/shoes/shoes3/issues/447
+
 === Fixed with 3.3.8
   * osx: improved building of gems if user has homebrew. 
     https://github.com/shoes/shoes3/issues/438
@@ -28,10 +30,11 @@
     https://github.com/shoes/shoes3/issues/441
   * crash after drawing pie chart. Sometimes.
     crash saving plots with unknown file extensions. 
+  * linux command line launch works better
   
 === Developer Issues with 3.3.8
   * Better cross building of gems (Windows gems from Linux)
-  * Ruby 2.4+ compatible. Tested with 2.5.5
+  * Ruby 2.4+ compatible. Shipping with 2.5.5
   * Support for 64 bit on Windows 10
   * Can build Shoes for native windows api. Not working well enough.
   * better integration for gtk version 3.22 and beyond.
